# nosqlite

./: .gitignore  Cargo.toml  LICENSE  README.md  aliases.js  search-index.js  settings.html  source-files.js
benches/: index.rs
examples/: basic.rs  iterator.rs
fallible_iterator/: struct.Iterator.html
fallible_streaming_iterator/: all.html  fn.convert.html  fn.empty.html  index.html  struct.Convert.html  struct.Empty.html  struct.Filter.html  struct.Fuse.html  struct.Map.html  struct.MapErr.html  struct.MapRef.html  struct.Skip.html  struct.SkipWhile.html  struct.Take.html  struct.TakeWhile.html  trait.DoubleEndedFallibleStreamingIterator.html  trait.FallibleStreamingIterator.html
libsqlite3_sys/: all.html  constant.FTS5_TOKENIZE_AUX.html  constant.FTS5_TOKENIZE_DOCUMENT.html  constant.FTS5_TOKENIZE_PREFIX.html  constant.FTS5_TOKENIZE_QUERY.html  constant.FTS5_TOKEN_COLOCATED.html  constant.FULLY_WITHIN.html  constant.NOT_WITHIN.html  constant.PARTLY_WITHIN.html  constant.SQLITE3_TEXT.html  constant.SQLITE_ABORT.html  constant.SQLITE_ABORT_ROLLBACK.html  constant.SQLITE_ACCESS_EXISTS.html  constant.SQLITE_ACCESS_READ.html  constant.SQLITE_ACCESS_READWRITE.html  constant.SQLITE_ALTER_TABLE.html  constant.SQLITE_ANALYZE.html  constant.SQLITE_ANY.html  constant.SQLITE_ATTACH.html  constant.SQLITE_AUTH.html  constant.SQLITE_AUTH_USER.html  constant.SQLITE_BLOB.html  constant.SQLITE_BUSY.html  constant.SQLITE_BUSY_RECOVERY.html  constant.SQLITE_BUSY_SNAPSHOT.html  constant.SQLITE_CANTOPEN.html  constant.SQLITE_CANTOPEN_CONVPATH.html  constant.SQLITE_CANTOPEN_ISDIR.html  (+741 more)
(+949 files in other folders)
