[package]
name = "nosqlite"
version = "0.1.0"
authors = ["Hiruna Jayamanne <hiru@hiru.dev>"]
edition = "2018"

[dependencies]
rusqlite = { version = "0.28", features = ["modern_sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "index"
harness = false
